<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/homepage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/n3"
    tools:context=".homepage">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#310D6A95"
            android:fontFamily="cursive"
            android:text="Last Measured"
            android:textColor="#FAE9F0"
...
            </RelativeLayout>


        </LinearLayout>

        <Button
            android:id="@+id/add_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#7E2536A1"
            android:text="ADD NEW"

            android:textColor="@color/black"
...
            app:layout_constraintHorizontal_bias="0.178"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.398" />

        <Button
            android:id="@+id/stat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="320dp"
            android:backgroundTint="#7E2AC852"
            android:text="View History"
            android:textColor="@color/black"
...
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.141"
            app:layout_constraintStart_toStartOf="parent" />

        <ProgressBar
            android:id="@+id/ProgressDiastole"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="112dp"
            android:layout_height="145dp"
            android:background="@drawable/shape_circle_bg"
            android:max="200"
            android:progress="0"
...
            app:layout_constraintHorizontal_bias="0.848"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.302" />

        <TextView
            android:id="@+id/TxtDayastole"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:background="#2259586A"
            android:text="120"
            android:textColor="#F4F2F2"
            android:textSize="20sp"
...
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        </RelativeLayout>

        <ProgressBar
            android:id="@+id/ProgressSystole"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="112dp"
            android:layout_height="145dp"
            android:background="@drawable/shape_circle_bg"
            android:max="150"
            android:progress="0"
...
            app:layout_constraintHorizontal_bias="0.849"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.619" />

        <ProgressBar
            android:id="@+id/Progresshrate"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="112dp"
            android:layout_height="145dp"
            android:background="@drawable/shape_circle_bg"
            android:max="150"
            android:progress="0"
...
            app:layout_constraintHorizontal_bias="0.849"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.906" />

        <TextView
            android:id="@+id/TxtSystole"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:text="80"
            android:textAlignment="center"
            android:textColor="#BAFFFFFF"
...
            app:layout_constraintHorizontal_bias="0.752"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.561" />

        <TextView
            android:id="@+id/txthrate"
            android:layout_width="35dp"
            android:layout_height="39dp"
            android:layout_marginTop="70dp"
            android:textAlignment="center"
            android:textColor="#BAFFFFFF"
            android:textSize="20sp"
...
            app:layout_constraintHorizontal_bias="0.776"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.824" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="72dp"
            android:layout_height="29dp"
            android:background="#9453476C"
            android:text="Systolic"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
...
            app:layout_constraintHorizontal_bias="0.811"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.695" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="141dp"
            android:layout_height="33dp"
            android:background="#9453476C"
            android:text="HeartRate"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
...
            app:layout_constraintHorizontal_bias="0.974"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.968" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#9453476C"
            android:text="Diastolic"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
...
