<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/loginActivity"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogInPage"
    android:background="@drawable/log"
    >


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="237dp"
        android:layout_height="61dp"
        app:counterEnabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="parent"
        app:errorEnabled="true"
        app:boxStrokeColor="@color/Pink_Login"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.331">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/EMAIL"

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="Email" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextTextPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="237dp"
        android:layout_height="84dp"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:helperText="at least 6 charecter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="parent"
        app:boxStrokeColor="@color/Pink_Login"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.514"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Password"

            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/Login"
        android:layout_width="253dp"
        android:layout_height="46dp"
        android:backgroundTint="#72FF5055"
        android:text="LOG IN"
        android:textColor="@android:color/white"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
        app:layout_constraintVertical_bias="0.156" />

<!--    <TextView-->
<!--        android:id="@+id/forget"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="FORGOT PASSWORD?"-->


<!--        app:layout_constraintBottom_toTopOf="@+id/Login"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.74"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"-->
<!--        app:layout_constraintVertical_bias="0.112" />-->

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="86dp"
        android:layout_height="69dp"
        app:layout_constraintBottom_toTopOf="@+id/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.458"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.718"
        app:srcCompat="@drawable/heart" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="120dp"
        android:layout_height="26dp"
        android:text="CardiacRecorder"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.588" />

    <Button
        android:id="@+id/gobck"
        android:layout_width="73dp"
        android:layout_height="44dp"
        android:background="@android:color/transparent"
        app:icon="@drawable/gobck"
        app:iconTint="#BE000000"
        tools:layout_editor_absoluteX="-9dp"
        tools:layout_editor_absoluteY="16dp" />


</androidx.constraintlayout.widget.ConstraintLayout>